# IDP-3510-04A

./: LICENSE  README.md
components/bitmap/: CMakeLists.txt
components/bitmap/include/: about.h  fail_icon.h  logo.h  setting.h  success_icon.h  wifi_0.h  wifi_1.h  wifi_2.h  wifi_3.h
components/bitmap/source/: about.c  fail_icon.c  logo.c  setting.c  success_icon.c  wifi_0.c  wifi_1.c  wifi_2.c  wifi_3.c
components/bsp/: CMakeLists.txt
components/bsp/include/: bsp_board.h  bsp_button.h  bsp_display.h  bsp_rgb_led.h  bsp_version.h  colornames.h
components/bsp/source/: bsp_button.c  bsp_display.c  bsp_rgb_led.c
components/ft81x/: CMakeLists.txt
components/ft81x/include/: ft8xx.h  ft8xx_cmd.h  ft8xx_gpu.h  ft8xx_hal.h  ft_gesture.h
components/ft81x/source/: ft8xx.c  ft8xx_cmd.c  ft8xx_hal.c  ft_gesture.c
examples/wifi_scan/: CMakeLists.txt  partitions_4M.csv  sdkconfig
examples/wifi_scan/main/: CMakeLists.txt  main.c  ui.c  ui.h
